--- a/style.css
+++ b/style.css
@@ -14,7 +14,12 @@ font-family: Arial;
     border:1px solid #bbb;
     transition: all 0.3s linear;
 }
-.sticky{
+
+/*Coupon code*/
+
+
+/*Coupon code end*/
+.fixed{
     position: fixed;
     top:0;
     width: 100%;
@@ -77,7 +82,7 @@ footer{
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 10%;
+  width: 5%;
 }
 
 .card:hover {
@@ -97,21 +102,21 @@ footer{
 }
 
 .box>img{
-    width: 67%;
+    width: 50%;
 }
-
+/*dsssssssssssssssssssssss*/
 .box{
     background-color: white;
     padding: 13px;
     margin: 20px;
+
 }
 footer{
     text-align:centre; 
 }
 
-/*https://paulund.co.uk/how-to-create-shiny-css-buttons*/
 /***********************************************************************
- *  white Background
+ *  
  **********************************************************************/
 .yellow{
     background: #56B870; /* Old browsers */
