--- a/stylesab.css
+++ b/stylesab.css
@@ -2,22 +2,40 @@ body {
   font-family: 'Shippori Mincho B1', serif;
   font-size: 48px;
   text-shadow: 4px 4px 4px #aaa;
- background: url(d2.jfif) no-repeat center center fixed; 
+  /*div {*/
+ /* opacity: 0.5;*/
+/*}*/
+ /*background: url(d2.jfif) no-repeat center center fixed; */
+
+ /*background: 
+*/ /*opacity: 0.5;*/
 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+/*img{
+	opacity: 0.9;
+}*/
 
-h1{
-	font-size: 3rem;
-	color: black;
+
+
+body{
+	background-image: opacity: 0.5;
 }
 
+h1{
+	font-size: 6rem;
+	color: white;
+}
+h4{
+	font-size: 2rem;
+	color:white;
+}
 hr{
-	border-color:orange;
-	border-width:3p;
+	border-color:green;
+	border-width:3;
 	max-width: 65px;
 }
 
@@ -43,4 +61,15 @@ border-color:red;
 
 .btn-xl{
 	padding: 1rem 2rem;
+}
+
+
+.mycontainer img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    z-index: 1;
+    opacity: 0.5;
 }
